# campulse-backend

./: .gitignore  CLAUDE.md  README.md  feed_redis.py  main.py  pyproject.toml  seed_data.json
.claude/: launch.json
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  logging_config.py  middleware.py  security.py
app/db/: database.py
app/repositories/: ai_insight.py  alert.py  allocation.py  corporate_action.py  exchange_rate.py  link.py  loan.py  manual_price.py  market_event.py  price_history.py  trade.py  user.py  watchlist.py
app/schemas/: admin.py  alert.py  allocation.py  auth.py  loans.py  trade.py  watchlist.py
app/services/: ai_coach.py  alert_service.py  analytics.py  best_profit_matcher.py  bot.py  corporate_action_service.py  fifo_matcher.py  finnhub_provider.py  identity.py  lifo_matcher.py  loan_service.py  manual_provider.py  markets.py  portfolio.py  price_providers.py  pricing.py  redis_service.py  reminder_scheduler.py  rule_coach.py  telegram_bot.py  telegram_client.py  (+1 more)
doc/: PRD.md
docs/: plan-corporate-actions.md  plan-loans.md  plan-multi-market.md  walkthrough.md
first-app/: __init__.py  main.py  pyproject.toml
firstapp/: main.py  pyproject.toml
tests/: test_account_linking.py  test_admin.py  test_ai_coach.py  test_alerts.py  test_analytics.py  test_auth.py  test_charts.py  test_corporate_actions.py  test_gold.py  test_journal.py  test_loans.py  test_multi_market.py  test_pnl.py  test_price_history.py  test_rule_coach.py  test_telegram_bot.py  test_trades.py  test_watchlist.py
(+17 files in other folders)
