[project]
name = "campulse-backend"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-dotenv==1.0.1",
    "fastapi[standard]==0.111.0",
    "uvicorn==0.30.1",
    "logfire[fastapi]==4.37.0",
]

[tool.uv]
package = false

[tool.logfire]
ignore_no_config = true

[tool.fastapi]
entrypoint = "main:app"