[project]
name = "campulse-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "requests",
    "cachetools",
    "pydantic",
    "matplotlib",
    "pytz",
    "fastapi[standard]",
    "uvicorn",
    "psycopg2-binary",
    "logfire[fastapi]",
    "python-telegram-bot[job-queue]",
]

[tool.uv]
package = false

[tool.logfire]
ignore_no_config = true