[project]
name = "campulse-backend"
version = "1.0.1"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "requests",
    "cachetools",
    "pydantic",
    "matplotlib",
    "pytz",
    "fastapi[standard]<0.137.0",
    "uvicorn",
    "psycopg2-binary",
    "logfire[fastapi]",
    "pyjwt",
    "redis",
]

[tool.uv]
package = false

[tool.logfire]
ignore_no_config = true
